@@ -75,15 +75,6 @@ base.uniquifyArray = function(array)
     return result;
 };
 
-base.keys = function(dictionary)
-{
-    var keys = [];
-    $.each(dictionary, function(key, value) {
-        keys.push(key);
-    });
-    return keys;
-};
-
 base.filterTree = function(tree, isLeaf, predicate)
 {
     var filteredTree = {};
